--- a/Termine/Termine/Termine.csproj
+++ b/Termine/Termine/Termine.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <None Include="ConsoleH\ConsoleFont.cpp" />
     <None Include="ConsoleH\ConsoleFont.h" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
