--- a/Termine/Example/Example.csproj
+++ b/Termine/Example/Example.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Termine\Termine.csproj">
